# whylearnc23

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  mise.toml
.github/workflows/: test.yml
libs/string/: CMakeLists.txt
libs/string/include/: wlc_string.h
libs/string/src/: wlc_string.c
tests/: CMakeLists.txt
tests/string/: CMakeLists.txt  test_string.c
